package lab5.task2;

public interface CPU {
    public String toString();    
}