package lab5.task2;

public interface Cabinet {
	public String toString();
}
