package lab5.task2;

public interface Display {
	public String toString();
}
