package lab5.task2;

public interface Payment {
    public String toString();
}